--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
-    <meta name="description" content="Cocoon -Portfolio">
-    <meta name="keywords" content="Cocoon , Portfolio">
-    <meta name="author" content="Pharaohlab">
+    <meta name="description" content="nixbees">
+    <meta name="keywords" content="Nixbees , Nixbees">
+    <meta name="author" content="nixbees">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
     <title>NixBees</title>
