--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <!-- ========== Meta Tags ========== -->
     <meta charset="UTF-8">
-    <meta name="description" content="Cocoon -Portfolio">
-    <meta name="keywords" content="Cocoon , Portfolio">
+    <meta name="description" content="Nixbees Company">
+    <meta name="keywords" content="Nixbees , Company">
     <meta name="author" content="Pharaohlab">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
