--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                 <div class="img_card">
                     <div class="row justify-content-center">
                         <div class="col-md-6 col-7 content_section">
-                            <div class="content_box">
+                            <div class="content_box" style="border-style: solid; border-color:#FF5C03; box-shadow:-8px -1px 6px 0px #A9A9A9">
                                 <div class="content_box_inner">
                                     <div>
                                         <h3>
