--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="nixbees">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- ========== Title ========== -->
-    <title>NixBees</title>
+    <title>Nixbees</title>
     <!-- ========== Favicon Ico ========== -->
     <!--<link rel="icon" href="fav.ico">-->
     <!-- ========== STYLESHEETS ========== -->
